<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/textUser_Register"
        android:hint="@string/textuser_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/textPassword_Register"
        android:hint="@string/textpwd_register"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/botonResgister_User"
        android:text="@string/botonuser_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>