<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">
<LinearLayout
    android:gravity="right"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cerrarsesion">
    <Button
        android:id="@+id/btnCerrarSesion"
        android:text="@string/TxtCerarsesión"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/backcerrarsession"
        android:textColor="@color/txtcerrarsession"/>
</LinearLayout>
   <LinearLayout
       android:id="@+id/linearUsrPwd"
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@id/cerrarsesion">
       <EditText
        android:id="@+id/activity_main_user"
        android:hint="@string/userhintmain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cerrarsesion"
        />
    <EditText
        android:id="@+id/activity_main_password"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_main_user"
        android:hint="@string/pswrdhintmain"/>
       <CheckBox
           android:layout_marginTop="16dp"
           android:id="@+id/chkRememberMe"
           android:layout_below="@+id/activity_main_password"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="Remember credential"/>
    <ProgressBar
    android:id="@+id/progress"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="gone"
    android:layout_centerInParent="true"
    />
   </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnRegisterLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="visible"
android:textColor="@color/colorTxtBtnReg"
            android:background="@color/colorBackBtnReg"
            android:text="@string/txtBtnregister"

            />
        <Button
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/txtBtnlogin"
            android:id="@+id/activity_main_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
